--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ eframe = { version = "0.29", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
-
-# You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
+rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
+web-time = "1.1"
+once_cell = "1.20"
+serde = { version = "1.0", features = ["derive"] }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
