--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ getrandom = { version = "0.2", features = ["js"] }
 web-time = "1.1"
 once_cell = "1.20"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sha1 = "0.10"
+hex = "0.4"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
