--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,31 +11,32 @@ all-features = true
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
-egui = "0.29"
-eframe = { version = "0.29", default-features = false, features = [
-    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+egui = "0.29.1"
+eframe = { version = "0.29.1", default-features = false, features = [
+    #    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
+    #    "persistence",   # Enable restoring app state when restarting the app.
 ] }
-log = "0.4"
-rand = "0.8"
-getrandom = { version = "0.2", features = ["js"] }
-web-time = "1.1"
-once_cell = "1.20"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-sha1 = "0.10"
-hex = "0.4"
+log = "0.4.22"
+rand = "0.8.5"
+getrandom = { version = "0.2.15", features = ["js"] }
+web-time = "1.1.0"
+once_cell = "1.20.2"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.130"
+sha1 = "0.10.6"
+hex = "0.4.3"
+rfd = "0.15.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-env_logger = "0.11"
+env_logger = "0.11.5"
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4"
-web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
+wasm-bindgen-futures = "0.4.45"
+web-sys = "0.3.72"              # to access the DOM (to hide the loading text)
 
 [profile.release]
 opt-level = 2 # fast and small wasm
