--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
-name = "eframe_on_mac"
+name = "chippie"
 version = "0.1.0"
 authors = ["Barend Scholtus <barend.scholtus@gmail.com>"]
 edition = "2021"
-include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
+include = ["LICENSE", "**/*.rs", "Cargo.toml"]
 rust-version = "1.81"
+description = "Chippie is a Chip-8 interpreter, native & web, with tests and games included."
+license = "Apache-2.0"
+license-file = "LICENSE"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -24,7 +27,7 @@ getrandom = { version = "0.2.15", features = ["js"] }
 web-time = "1.1.0"
 once_cell = "1.20.2"
 serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.130"
+serde_json = "1.0.132"
 sha1 = "0.10.6"
 hex = "0.4.3"
 rfd = "0.15.0"
@@ -47,11 +50,3 @@ opt-level = 2
 
 
 [patch.crates-io]
-
-# If you want to use the bleeding edge version of egui and eframe:
-# egui = { git = "https://github.com/emilk/egui", branch = "master" }
-# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
-
-# If you fork https://github.com/emilk/egui you can test with:
-# egui = { path = "../egui/crates/egui" }
-# eframe = { path = "../egui/crates/eframe" }
